--- a/hotel-web/src/main/resources/application-dev.yml
+++ b/hotel-web/src/main/resources/application-dev.yml
@@ -144,6 +144,7 @@ hotel:
         getMenus: ${hotel.webserver.WxmpService.serviceUrl}/8A5DA52E/ErploginApi/getMenus.do # 商家/员工获取ERP列表菜单
         getMall: ${hotel.webserver.WxmpService.serviceUrl}/8A5DA52E/ErploginApi/getMall.do # erp商家是否有商城功能
         getMenusThree: ${hotel.webserver.WxmpService.serviceUrl}/8A5DA52E/ErploginApi/getMenusThree.do # erp三级菜单接口
+        wxmemberPayRefund: ${hotel.webserver.WxmpService.serviceUrl}/8A5DA52E/payApi/6F6D9AD2/79B4DE7C/wxmemberPayRefund.do  # 微信退款
     ShortService:
       signKey: goodtom2016@shortUrl.
       serviceUrl: http://short.duofee.com
@@ -157,7 +158,6 @@ hotel:
       ApiMap: # Api接口列表
         findMemberCard: ${hotel.webserver.MemberService.serviceUrl}/memberAPI/member/findMemberCard   # 获取会员信息
         findCardByMembeId: ${hotel.webserver.MemberService.serviceUrl}/memberAPI/member/findCardByMembeId   # 包含会员信息、微信卡券、多粉卡券
-        wxmemberPayRefund: ${hotel.webserver.MemberService.serviceUrl}/8A5DA52E/payApi/6F6D9AD2/79B4DE7C/wxmemberPayRefund.do  # 微信退款
     JxcService:
         serviceUrl: https://jxc.deeptel.com.cn
         account: erp_5
