调整整体代码 使用阿里巴巴规范检测 去掉暂时发现的logger ，改用@Slf4j 删除部分无用代码 大致调整

--- a/hotel-web/src/main/resources/application-test.yml
+++ b/hotel-web/src/main/resources/application-test.yml
@@ -21,9 +21,9 @@ spring:
        nodes: 113.106.202.51:6379,113.106.202.50:9379,113.106.202.53:9379
        maxRedirects: 3
    sentinel:
-     # comma-separated list of host:port pairs  哨兵的配置列表
+#     # comma-separated list of host:port pairs  哨兵的配置列表
      nodes: 113.106.202.51:26379,113.106.202.50:29379,113.106.202.53:29379
-     # name of Redis server  哨兵监听的Redis server的名称
+#     # name of Redis server  哨兵监听的Redis server的名称
      master: mymaster
    pool:
      max-wait: -1
