--- a/pom.xml
+++ b/pom.xml
@@ -50,12 +50,13 @@
         <dev.lib.lombok>1.16.18</dev.lib.lombok>
         <dev.lib.joda-time>2.9.9</dev.lib.joda-time>
         <dev.lib.gt-api>1.3.22-SNAPSHOT</dev.lib.gt-api>
+        <dev.lib.guava>23.0</dev.lib.guava>
     </properties>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>1.5.8.RELEASE</version>
+        <version>1.5.9.RELEASE</version>
     </parent>
 
 
@@ -81,6 +82,12 @@
             <groupId>com.gt.member</groupId>
             <artifactId>member_bo</artifactId>
             <version>1.0.6-SNAPSHOT</version>
+            <exclusions>
+                <exclusion>
+                    <artifactId>fastjson</artifactId>
+                    <groupId>com.alibaba</groupId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
         <!-- 将内嵌的tomcat容器标记为provided(来自官网) -->
@@ -146,11 +153,23 @@
             <groupId>io.springfox</groupId>
             <artifactId>springfox-swagger-ui</artifactId>
             <version>${dev.lib.swagger2}</version>
+            <exclusions>
+                <exclusion>
+                    <artifactId>guava</artifactId>
+                    <groupId>com.google.guava</groupId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>io.springfox</groupId>
             <artifactId>springfox-swagger2</artifactId>
             <version>${dev.lib.swagger2}</version>
+            <exclusions>
+                <exclusion>
+                    <artifactId>guava</artifactId>
+                    <groupId>com.google.guava</groupId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <!-- Mybatis -->
 
@@ -212,10 +231,10 @@
             <artifactId>spring-session-data-redis</artifactId>
         </dependency>
 
-        <dependency>
+        <!--<dependency>
             <groupId>org.springframework.session</groupId>
             <artifactId>spring-session</artifactId>
-        </dependency>
+        </dependency>-->
         <!-- json 包 -->
         <dependency>
             <groupId>com.alibaba</groupId>
@@ -242,10 +261,12 @@
             <version>${dev.lib.joda-time}</version>
         </dependency>
 
-        <!--<dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-security</artifactId>
-        </dependency>-->
+        <!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>${dev.lib.guava}</version>
+        </dependency>
 
     </dependencies>
 
