--- a/hotel-web/src/main/resources/application-dev.yml
+++ b/hotel-web/src/main/resources/application-dev.yml
@@ -16,7 +16,7 @@ spring:
 #   port: 6379
    password: gt@123456
    database: 3
-   timeout: 20000
+   timeout: 5000
    cluster:
        nodes: 113.106.202.51:6379,113.106.202.50:9379,113.106.202.53:9379
        maxRedirects: 3
@@ -37,30 +37,31 @@ spring:
      url: jdbc:mysql://113.106.202.51:3306/gt_hotel?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&createDatabaseIfNotExist=true
      username: gt_hotel
      password: gt123456
-#     url: jdbc:mysql://localhost:3306/gt_hotel?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&createDatabaseIfNotExist=true
-#     username: root
-#     password: 123456
+     driver-class-name: com.mysql.jdbc.Driver
      connectionInitSqls: set names utf8mb4
      # 下面为连接池的补充设置，应用到上面所有数据源中
      # 初始化大小，最小，最大
      initial-size: 5
      max-active: 20
-     # 配置获取连接等待超时的时间
+      # 配置获取连接等待超时的时间
      maxWait: 60000
-     # 配置间隔多久才进行一次检测，检测需要关闭的空闲连接，单位是毫秒 五分钟
-     timeBetweenEvictionRunsMillis: 300000
-     # 配置一个连接在池中最小生存的时间，单位是毫秒
-     minEvictableIdleTimeMillis: 30000
+   # 配置间隔多久才进行一次检测，检测需要关闭的空闲连接，单位是毫秒 五分钟
+     timeBetweenEvictionRunsMillis: 60000
+   # 配置一个连接在池中最小生存的时间，单位是毫秒
+     minEvictableIdleTimeMillis: 300000
      validationQuery: select 1
      testWhileIdle: true
-     testOnBorrow: true
-     testOnReturn: true
+     testOnBorrow: false
+     testOnReturn: false
+     remove-abandoned: true
+     remove-abandoned-timeout: 1800
+     log-abandoned: true
      # 是否缓存preparedStatement，也就是PSCache。PSCache对支持游标的数据库性能提升巨大，比如说oracle。在mysql下建议关闭。
 #     poolPreparedStatements: true
 #     maxPoolPreparedStatementPerConnectionSize: 20
      # 配置监控统计拦截的filters，去掉后监控界面sql无法统计，'wall'用于防火墙
      filters: stat,wall,slf4j
-     # 通过connectProperties属性来打开mergeSql功能；慢SQL记录
+     # 通过connectProperties属性来打开mergeSql功能；合并mergeSql 慢SQL记录
      connectionProperties: druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
      # 合并多个DruidDataSource的监控数据
      #useGlobalDataSourceStat: true
@@ -75,12 +76,7 @@ spring:
       # 如果spring.datasource.druid.aop-patterns要代理的类没有定义interface请设置spring.aop.proxy-target-class=true
       # Spring监控AOP切入点，如x.y.z.service.*,配置多个英文逗号分隔
      aop-patterns: com.gt.hotel.*.service.*
-#     <!-- 超过时间限制是否回收 -->
-#     remove-abandoned: true
-#     <!-- 超时时间；单位为秒。180秒=3分钟 -->
-#     remove-abandoned-timeout: 180
-#     <!-- 关闭abanded连接时输出错误日志 -->
-#     log-abandoned: true
+
 
 #====================================================#
 #=============== Mybatis-Plus Settings ==============#
