--- a/hotel-web/src/main/resources/application-test.yml
+++ b/hotel-web/src/main/resources/application-test.yml
@@ -73,7 +73,8 @@ spring:
        # 如果spring.datasource.druid.aop-patterns要代理的类没有定义interface请设置spring.aop.proxy-target-class=true
       # Spring监控AOP切入点，如x.y.z.service.*,配置多个英文逗号分隔
      aop-patterns: com.gt.hotel.*.service.*
-
+ jmx:
+   default-domain: test
 
 #====================================================#
 #=============== Mybatis-Plus Settings ==============#
