--- a/pom.xml
+++ b/pom.xml
@@ -52,7 +52,7 @@
         <dev.lib.lombok>1.16.18</dev.lib.lombok>
         <dev.lib.joda-time>2.9.9</dev.lib.joda-time>
         <dev.lib.gt-api>1.3.24-SNAPSHOT</dev.lib.gt-api>
-        <dev.lib.guava>23.0</dev.lib.guava>
+        <dev.lib.guava>20.0</dev.lib.guava>
     </properties>
 
     <parent>
@@ -155,23 +155,24 @@
             <groupId>io.springfox</groupId>
             <artifactId>springfox-swagger-ui</artifactId>
             <version>${dev.lib.swagger2}</version>
-            <!--<exclusions>-->
-            <!--<exclusion>-->
-            <!--<artifactId>guava</artifactId>-->
-            <!--<groupId>com.google.guava</groupId>-->
-            <!--</exclusion>-->
-            <!--</exclusions>-->
+            <exclusions>
+                <exclusion>
+                    <artifactId>guava</artifactId>
+                    <groupId>com.google.guava</groupId>
+                </exclusion>
+            </exclusions>
+
         </dependency>
         <dependency>
             <groupId>io.springfox</groupId>
             <artifactId>springfox-swagger2</artifactId>
             <version>${dev.lib.swagger2}</version>
-            <!--<exclusions>-->
-            <!--<exclusion>-->
-            <!--<artifactId>guava</artifactId>-->
-            <!--<groupId>com.google.guava</groupId>-->
-            <!--</exclusion>-->
-            <!--</exclusions>-->
+            <exclusions>
+                <exclusion>
+                    <artifactId>guava</artifactId>
+                    <groupId>com.google.guava</groupId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <!-- Mybatis -->
 
@@ -264,11 +265,17 @@
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
-        <!--<dependency>-->
-        <!--<groupId>com.google.guava</groupId>-->
-        <!--<artifactId>guava</artifactId>-->
-        <!--<version>${dev.lib.guava}</version>-->
-        <!--</dependency>-->
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>${dev.lib.guava}</version>
+        </dependency>
+
+        <!-- AOP -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
+        </dependency>
 
     </dependencies>
 
