--- a/pom.xml
+++ b/pom.xml
@@ -277,6 +277,12 @@
             <artifactId>spring-boot-starter-aop</artifactId>
         </dependency>
 				
+				
+		<dependency>
+		          <groupId>com.corundumstudio.socketio</groupId>
+		          <artifactId>netty-socketio</artifactId>
+		          <version>1.7.7</version>
+		</dependency>
     </dependencies>
 
     <!-- 打包环境工具 -->
